--- a/Sofi/Progect Sofi/New/сreate_trifle.html
+++ b/Sofi/Progect Sofi/New/сreate_trifle.html
@@ -9,10 +9,128 @@
 </head>
 
 <script>
-    function changeBackground() {
-        var div = document.getElementById("trapezoid_1");
-        div.style.backgroundColor = "red";
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changeColor_trapezoid_1_button1');
     }
+
+    function changeColor_trapezoid_1_button2() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changeColor_trapezoid_1_button2');
+    }
+
+    function changeColor_trapezoid_1_button3() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changeColor_trapezoid_1_button3');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+    function changeColor_trapezoid_1_button1() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed');
+    }
+
+
 
 
 
@@ -23,38 +141,64 @@
 
     <div class="trifle">
 
-        <button onclick="changeBackground()">Изменить фон</button>
 
 
-        <div class="trapezoid_1">
-
+        <div class="g1">
+            <div class="trapezoid_1"></div>
+            <button onclick="changeColor_trapezoid_1_button1()" class="button1">Вкус</button>
+            <button onclick="changeColor_trapezoid_1_button2()" class="button2">Вкус</button>
+            <button onclick="changeColor_trapezoid_1_button3()" class="button3">Вкус</button>
         </div>
 
-        <div class="trapezoid_2">
 
+
+
+
+
+
+        <div class="g1">
+            <div class="trapezoid_2"></div>
+            <button onclick="changeColor()" class="button4">Вкус</button>
+            <button onclick="changeColor()" class="button5">Вкус</button>
+            <button onclick="changeColor()" class="button6">Вкус</button>
         </div>
 
-        <div class="trapezoid_3">
-
+        <div class="g1">
+            <div class="trapezoid_3"></div>
+            <button onclick="changeColor()" class="button7">Вкус</button>
+            <button onclick="changeColor()" class="button8">Вкус</button>
+            <button onclick="changeColor()" class="button9">Вкус</button>
         </div>
 
-        <div class="trapezoid_4">
-
+        <div class="g1">
+            <div class="trapezoid_4"></div>
+            <button onclick="changeColor()" class="button10">Вкус</button>
+            <button onclick="changeColor()" class="button11">Вкус</button>
+            <button onclick="changeColor()" class="button12">Вкус</button>
         </div>
-
-        <div class="trapezoid_5">
+        <div class="g1">
+            <div class="trapezoid_5"></div>
+            <button onclick="changeColor()" class="button13">Вкус</button>
+            <button onclick="changeColor()" class="button14">Вкус</button>
+            <button onclick="changeColor()" class="button15">Вкус</button>
         </div>
-
-        <div class="trapezoid_6">
-
+        <div class="g1">
+            <div class="trapezoid_6"></div>
+            <button onclick="changeColor()" class="button16">Вкус</button>
+            <button onclick="changeColor()" class="button17">Вкус</button>
+            <button onclick="changeColor()" class="button18">Вкус</button>
         </div>
-
-        <div class="trapezoid_7">
-
+        <div class="g1">
+            <div class="trapezoid_7"></div>
+            <button onclick="changeColor()" class="button19">Вкус</button>
+            <button onclick="changeColor()" class="button20">Вкус</button>
+            <button onclick="changeColor()" class="button21">Вкус</button>
         </div>
-
-        <div class="trapezoid_8">
-
+        <div class="g1">
+            <div class="trapezoid_8"></div>
+            <button onclick="changeColor()" class="button22">Вкус</button>
+            <button onclick="changeColor()" class="button23">Вкус</button>
+            <button onclick="changeColor()" class="button24">Вкус</button>
         </div>
 
     </div>
