--- a/Sofi/Progect Sofi/New/test/test.html
+++ b/Sofi/Progect Sofi/New/test/test.html
@@ -17,11 +17,12 @@
 </script>
 
 <style>
-    #myDiv {
-        width: 200px;
-        height: 200px;
-        background-color: blue;
-    }
+    .trapezoid_1 {
+  width: 200px;
+  height: 100px;
+  background-color: blue;
+}
+
 </style>
 
 
