--- a/Sofi/Progect Sofi/New/сreate_trifle.html
+++ b/Sofi/Progect Sofi/New/сreate_trifle.html
@@ -10,138 +10,89 @@
 
 <script>
 
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changeColor_trapezoid_1_button1');
+    function changed_chocolate_biscuit_1() {
+        var trapezoid = document.querySelector('.trapezoid_4');
+        trapezoid.classList.toggle('changed_chocolate_biscuit_1');
     }
 
-    function changeColor_trapezoid_1_button2() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changeColor_trapezoid_1_button2');
+    function changed_vanilla_biscuit_1() {
+        var trapezoid = document.querySelector('.trapezoid_4');
+        trapezoid.classList.toggle('changed_vanilla_biscuit_1');
     }
 
-    function changeColor_trapezoid_1_button3() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changeColor_trapezoid_1_button3');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
-    }
-
-    function changeColor_trapezoid_1_button1() {
-        var trapezoid = document.querySelector('.trapezoid_1');
-        trapezoid.classList.toggle('changed');
+    function changed_red_velvet_biscuit_1() {
+        var trapezoid = document.querySelector('.trapezoid_4');
+        trapezoid.classList.toggle('changed_red_velvet_biscuit_1');
     }
 
 
+    function changed_chocolate_cream() {
+        var trapezoid = document.querySelector('.trapezoid_3');
+        trapezoid.classList.toggle('changed_chocolate_cream');
+    }
+
+    function changed_vanilla_cream() {
+        var trapezoid = document.querySelector('.trapezoid_3');
+        trapezoid.classList.toggle('changed_vanilla_cream');
+    }
+
+    function changed_strawberry_cream() {
+        var trapezoid = document.querySelector('.trapezoid_3');
+        trapezoid.classList.toggle('changed_strawberry_cream');
+    }
+
+    function changed_mango_cream() {
+        var trapezoid = document.querySelector('.trapezoid_3');
+        trapezoid.classList.toggle('changed_mango_cream');
+    }
 
 
+    function changed_blueberries_interlayer() {
+        var trapezoid = document.querySelector('.trapezoid_2');
+        trapezoid.classList.toggle('changed_blueberries_interlayer');
+    }
+
+    function changed_strawberry_interlayer() {
+        var trapezoid = document.querySelector('.trapezoid_2');
+        trapezoid.classList.toggle('changed_strawberry_interlayer');
+    }
+
+    function changed_mango_interlayer() {
+        var trapezoid = document.querySelector('.trapezoid_2');
+        trapezoid.classList.toggle('changed_mango_interlayer');
+    }
+
+    function changed_caramel_interlayer() {
+        var trapezoid = document.querySelector('.trapezoid_2');
+        trapezoid.classList.toggle('changed_caramel_interlayer');
+    }
+
+    function changed_chocolate_interlayer() {
+        var trapezoid = document.querySelector('.trapezoid_2');
+        trapezoid.classList.toggle('changed_chocolate_interlayer');
+    }
+
+
+    function changed_chocolate_biscuit_2() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed_chocolate_biscuit_2');
+    }
+
+    function changed_vanilla_biscuit_2() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed_vanilla_biscuit_2');
+    }
+
+    function changed_red_velvet_biscuit_2() {
+        var trapezoid = document.querySelector('.trapezoid_1');
+        trapezoid.classList.toggle('changed_red_velvet_biscuit_2');
+    }
 
 </script>
-
 
 <body class="background">
 
     <div class="trifle">
-
-
 
         <div class="trapezoid_1"></div>
 
@@ -151,13 +102,62 @@
 
         <div class="trapezoid_4"></div>
 
-        <div class="trapezoid_5"></div>
+    </div>
 
-        <div class="trapezoid_6"></div>
+    <div class="layers">
 
-        <div class="trapezoid_7"></div>
+        <div class="biscuit_1">
 
-        <div class="trapezoid_8"></div>
+            <p class="biscuit_1P">
+                1 слой - бисквит
+            </p>
+
+            <button onclick="changed_chocolate_biscuit_1()" class="chocolate_biscuit_1">Шоколадный бисквит</button>
+            <button onclick="changed_vanilla_biscuit_1()" class="vanilla_biscuit_1">Ванильный бисквит</button>
+            <button onclick="changed_red_velvet_biscuit_1()" class="red_velvet_biscuit_1">Красный бархат</button>
+
+        </div>
+
+        <div class="cream">
+
+            <p class="creamP">
+                2 слой - крем
+            </p>
+
+            <button onclick="changed_chocolate_cream()" class="chocolate_cream">Шоколадный крем</button>
+            <button onclick="changed_vanilla_cream()" class="vanilla_cream">Ванильный крем</button>
+            <button onclick="changed_strawberry_cream()" class="strawberry_cream">Клубничный крем</button>
+            <button onclick="changed_mango_cream()" class="mango_cream">Манговый крем</button>
+
+        </div>
+
+        <div class="interlayer">
+
+            <p class="interlayerP">
+                3 слой - прослойка
+            </p>
+
+            <button onclick="changed_blueberries_interlayer()" class="blueberries_interlayer">Черничная
+                прослойка</button>
+            <button onclick="changed_strawberry_interlayer()" class="strawberry_interlayer">Клубничная
+                прослойка</button>
+            <button onclick="changed_mango_interlayer()" class="mango_interlayer">Прослойка из манго </button>
+            <button onclick="changed_caramel_interlayer()" class="caramel_interlayer">Караменьная прослойка</button>
+            <button onclick="changed_chocolate_interlayer()" class="chocolate_interlayer">Шоколадная прослойка</button>
+
+        </div>
+
+        <div class="biscuit_2">
+
+            <p class="biscuit_2P">
+                4 слой - бисквит
+            </p>
+
+            <button onclick="changed_chocolate_biscuit_2()" class="chocolate_biscuit_2">Шоколадный бисквит</button>
+            <button onclick="changed_vanilla_biscuit_2()" class="vanilla_biscuit_2">Ванильный бисквит</button>
+            <button onclick="changed_red_velvet_biscuit_2()" class="changed_red_velvet_biscuit_2">Краснный бархат</button>
+
+        </div>
 
     </div>
 </body>
