--- a/Sofi/Progect Sofi/New/сreate_trifle.html
+++ b/Sofi/Progect Sofi/New/сreate_trifle.html
@@ -155,7 +155,7 @@
 
             <button onclick="changed_chocolate_biscuit_2()" class="chocolate_biscuit_2">Шоколадный бисквит</button>
             <button onclick="changed_vanilla_biscuit_2()" class="vanilla_biscuit_2">Ванильный бисквит</button>
-            <button onclick="changed_red_velvet_biscuit_2()" class="changed_red_velvet_biscuit_2">Краснный бархат</button>
+            <button onclick="changed_red_velvet_biscuit_2()" class="red_velvet_biscuit_2">Краснный бархат</button>
 
         </div>
 
